--- a/web/index.html
+++ b/web/index.html
@@ -35,6 +35,9 @@
             <a href="#" class="text-muted text-decoration-none me-2 top-bar-icon" @click.prevent="showBookmarkModal = true" title="Bookmark this app">
                 <i class="bi bi-bookmark-plus"></i>
             </a>
+            <a href="/myflix.html" class="text-muted text-decoration-none me-2 top-bar-icon" title="Switch to MyFlix View">
+                <i class="bi bi-film"></i>
+            </a>
             <a href="https://github.com/xixogo5105/uiptv" target="_blank" class="text-muted text-decoration-none top-bar-icon" title="Help">
                 <i class="bi bi-question-circle"></i>
             </a>
