--- a/web/myflix.html
+++ b/web/myflix.html
@@ -15,7 +15,7 @@
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/myflix.css">
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.7.11/shaka-player.compiled.js"></script>
 </head>
 <body>
@@ -84,7 +84,7 @@
 
                     <video
                             v-if="!isYoutube"
-                            ref="videoPlayer"
+                            ref="videoPlayerHome"
                             class="nf-video"
                             controls
                             autoplay
@@ -328,7 +328,7 @@
 
                                 <video
                                         v-if="!isYoutube"
-                                        ref="videoPlayer"
+                                        ref="videoPlayerSeries"
                                         class="nf-video"
                                         controls
                                         autoplay
