--- a/web/myflix.html
+++ b/web/myflix.html
@@ -88,20 +88,22 @@
                 <div class="nf-track-wrap">
                     <button class="nf-edge-btn left" onclick="scrollRow('row-live', -1)" type="button"><i class="bi bi-chevron-left"></i></button>
                     <div class="nf-strip" id="row-live">
-                        <button v-if="isModeState('itv','accounts')" v-for="account in filteredSupportedAccounts" :key="'itv-' + account.dbId" class="nf-card" @click="loadModeCategories('itv', account)">
-                            <div class="nf-card-icon"><i class="bi bi-person-circle"></i></div>
+                        <button v-if="isModeState('itv','accounts')" v-for="account in filteredSupportedAccounts" :key="'itv-' + account.dbId" class="nf-card nf-card-title-only" @click="loadModeCategories('itv', account)">
                             <div class="nf-card-title">{{ account.accountName }}</div>
-                            <div class="nf-card-subtitle">Open categories</div>
                         </button>
                         <button v-if="isModeState('itv','categories')" v-for="category in filteredModeCategories('itv')" :key="'itv-cat-' + category.dbId" class="nf-card" @click="loadModeChannels('itv', category.dbId)">
                             <div class="nf-card-icon"><i class="bi bi-folder-fill"></i></div>
                             <div class="nf-card-title">{{ category.title }}</div>
                         </button>
-                        <button v-if="isModeState('itv','channels')" v-for="channel in filteredModeChannels('itv')" :key="'itv-ch-' + (channel.dbId || channel.channelId || channel.id)" class="nf-card nf-card-media" @click="handleModeSelection('itv', channel)">
-                            <img v-if="channel.logo" class="nf-media-image" :src="channel.logo" @error="mediaImageError" alt="channel image">
+                        <button v-if="isModeState('itv','channels')" v-for="channel in visibleModeChannels('itv')" :key="'itv-ch-' + (channel.dbId || channel.channelId || channel.id)" class="nf-card nf-card-media" @click="handleModeSelection('itv', channel)">
+                            <img v-if="channel.logo" class="nf-media-image" :src="channel.logo" loading="lazy" @error="mediaImageError" alt="channel image">
                             <div class="nf-media-fallback" :class="{ show: !channel.logo }">{{ channel.name }}</div>
                             <div class="nf-media-gradient"></div>
                             <div class="nf-card-title nf-media-title">{{ channel.name }}</div>
+                        </button>
+                        <button v-if="isModeState('itv','channels') && hasMoreModeChannels('itv')" class="nf-card nf-load-more-card" @click="loadMoreModeChannels('itv')">
+                            <div class="nf-card-icon"><i class="bi bi-plus-circle"></i></div>
+                            <div class="nf-card-title">Load More</div>
                         </button>
                         <div v-if="isModeState('itv','accounts') && filteredSupportedAccounts.length === 0" class="nf-empty-card">No supported accounts found.</div>
                         <div v-if="isModeState('itv','categories') && filteredModeCategories('itv').length === 0" class="nf-empty-card">No categories found.</div>
@@ -122,20 +124,22 @@
                 <div class="nf-track-wrap">
                     <button class="nf-edge-btn left" onclick="scrollRow('row-vod', -1)" type="button"><i class="bi bi-chevron-left"></i></button>
                     <div class="nf-strip" id="row-vod">
-                        <button v-if="isModeState('vod','accounts')" v-for="account in filteredSupportedAccounts" :key="'vod-' + account.dbId" class="nf-card" @click="loadModeCategories('vod', account)">
-                            <div class="nf-card-icon"><i class="bi bi-person-circle"></i></div>
+                        <button v-if="isModeState('vod','accounts')" v-for="account in filteredSupportedAccounts" :key="'vod-' + account.dbId" class="nf-card nf-card-title-only" @click="loadModeCategories('vod', account)">
                             <div class="nf-card-title">{{ account.accountName }}</div>
-                            <div class="nf-card-subtitle">Open VOD categories</div>
                         </button>
                         <button v-if="isModeState('vod','categories')" v-for="category in filteredModeCategories('vod')" :key="'vod-cat-' + category.dbId" class="nf-card" @click="loadModeChannels('vod', category.dbId)">
                             <div class="nf-card-icon"><i class="bi bi-folder-fill"></i></div>
                             <div class="nf-card-title">{{ category.title }}</div>
                         </button>
-                        <button v-if="isModeState('vod','channels')" v-for="channel in filteredModeChannels('vod')" :key="'vod-ch-' + (channel.dbId || channel.channelId || channel.id)" class="nf-card nf-card-media" @click="handleModeSelection('vod', channel)">
-                            <img v-if="channel.logo" class="nf-media-image" :src="channel.logo" @error="mediaImageError" alt="vod image">
+                        <button v-if="isModeState('vod','channels')" v-for="channel in visibleModeChannels('vod')" :key="'vod-ch-' + (channel.dbId || channel.channelId || channel.id)" class="nf-card nf-card-media" @click="handleModeSelection('vod', channel)">
+                            <img v-if="channel.logo" class="nf-media-image" :src="channel.logo" loading="lazy" @error="mediaImageError" alt="vod image">
                             <div class="nf-media-fallback" :class="{ show: !channel.logo }">{{ channel.name }}</div>
                             <div class="nf-media-gradient"></div>
                             <div class="nf-card-title nf-media-title">{{ channel.name }}</div>
+                        </button>
+                        <button v-if="isModeState('vod','channels') && hasMoreModeChannels('vod')" class="nf-card nf-load-more-card" @click="loadMoreModeChannels('vod')">
+                            <div class="nf-card-icon"><i class="bi bi-plus-circle"></i></div>
+                            <div class="nf-card-title">Load More</div>
                         </button>
                         <div v-if="isModeState('vod','accounts') && filteredSupportedAccounts.length === 0" class="nf-empty-card">No supported accounts found.</div>
                         <div v-if="isModeState('vod','categories') && filteredModeCategories('vod').length === 0" class="nf-empty-card">No categories found.</div>
@@ -157,26 +161,32 @@
                 <div class="nf-track-wrap">
                     <button class="nf-edge-btn left" onclick="scrollRow('row-series', -1)" type="button"><i class="bi bi-chevron-left"></i></button>
                     <div class="nf-strip" id="row-series">
-                        <button v-if="isModeState('series','accounts')" v-for="account in filteredSupportedAccounts" :key="'series-' + account.dbId" class="nf-card" @click="loadModeCategories('series', account)">
-                            <div class="nf-card-icon"><i class="bi bi-person-circle"></i></div>
+                        <button v-if="isModeState('series','accounts')" v-for="account in filteredSupportedAccounts" :key="'series-' + account.dbId" class="nf-card nf-card-title-only" @click="loadModeCategories('series', account)">
                             <div class="nf-card-title">{{ account.accountName }}</div>
-                            <div class="nf-card-subtitle">Open series categories</div>
                         </button>
                         <button v-if="isModeState('series','categories')" v-for="category in filteredModeCategories('series')" :key="'series-cat-' + category.dbId" class="nf-card" @click="loadModeChannels('series', category.dbId)">
                             <div class="nf-card-icon"><i class="bi bi-folder-fill"></i></div>
                             <div class="nf-card-title">{{ category.title }}</div>
                         </button>
-                        <button v-if="isModeState('series','channels')" v-for="channel in filteredModeChannels('series')" :key="'series-ch-' + (channel.dbId || channel.channelId || channel.id)" class="nf-card nf-card-media" @click="handleModeSelection('series', channel)">
-                            <img v-if="channel.logo" class="nf-media-image" :src="channel.logo" @error="mediaImageError" alt="series image">
+                        <button v-if="isModeState('series','channels')" v-for="channel in visibleModeChannels('series')" :key="'series-ch-' + (channel.dbId || channel.channelId || channel.id)" class="nf-card nf-card-media" @click="handleModeSelection('series', channel)">
+                            <img v-if="channel.logo" class="nf-media-image" :src="channel.logo" loading="lazy" @error="mediaImageError" alt="series image">
                             <div class="nf-media-fallback" :class="{ show: !channel.logo }">{{ channel.name }}</div>
                             <div class="nf-media-gradient"></div>
                             <div class="nf-card-title nf-media-title">{{ channel.name }}</div>
                         </button>
-                        <button v-if="isModeState('series','episodes')" v-for="episode in filteredModeEpisodes('series')" :key="'series-ep-' + (episode.channelId || episode.id)" class="nf-card nf-card-media" @click="handleModeSelection('series', episode)">
-                            <img v-if="episode.logo" class="nf-media-image" :src="episode.logo" @error="mediaImageError" alt="episode image">
+                        <button v-if="isModeState('series','channels') && hasMoreModeChannels('series')" class="nf-card nf-load-more-card" @click="loadMoreModeChannels('series')">
+                            <div class="nf-card-icon"><i class="bi bi-plus-circle"></i></div>
+                            <div class="nf-card-title">Load More</div>
+                        </button>
+                        <button v-if="isModeState('series','episodes')" v-for="episode in visibleModeEpisodes('series')" :key="'series-ep-' + (episode.channelId || episode.id)" class="nf-card nf-card-media" @click="handleModeSelection('series', episode)">
+                            <img v-if="episode.logo" class="nf-media-image" :src="episode.logo" loading="lazy" @error="mediaImageError" alt="episode image">
                             <div class="nf-media-fallback" :class="{ show: !episode.logo }">{{ episode.name }}</div>
                             <div class="nf-media-gradient"></div>
                             <div class="nf-card-title nf-media-title">{{ episode.name }}</div>
+                        </button>
+                        <button v-if="isModeState('series','episodes') && hasMoreModeEpisodes('series')" class="nf-card nf-load-more-card" @click="loadMoreModeEpisodes('series')">
+                            <div class="nf-card-icon"><i class="bi bi-plus-circle"></i></div>
+                            <div class="nf-card-title">Load More</div>
                         </button>
                         <div v-if="isModeState('series','accounts') && filteredSupportedAccounts.length === 0" class="nf-empty-card">No supported accounts found.</div>
                         <div v-if="isModeState('series','categories') && filteredModeCategories('series').length === 0" class="nf-empty-card">No categories found.</div>
@@ -209,17 +219,15 @@
                             <p v-if="getVodDetail() && getVodDetail().plot">{{ getVodDetail().plot }}</p>
                             <a
                                     v-if="getImdbUrl('vod')"
-                                    class="nf-imdb-link"
+                                    class="nf-imdb-rating-pill"
                                     :href="getImdbUrl('vod')"
                                     target="_blank"
                                     rel="noopener noreferrer"
                                     title="Open on IMDb">
                                 <img class="nf-imdb-logo" src="https://upload.wikimedia.org/wikipedia/commons/6/69/IMDB_Logo_2016.svg" alt="IMDb">
-                                <span>Open on IMDb</span>
-                                <i class="bi bi-box-arrow-up-right"></i>
+                                <span class="nf-imdb-rating-value">{{ getVodDetail() ? (getVodDetail().rating || 'N/A') : 'N/A' }}</span>
                             </a>
                             <div class="nf-meta-grid">
-                                <div><strong>Rating:</strong> {{ getVodDetail() ? (getVodDetail().rating || 'N/A') : 'N/A' }}</div>
                                 <div><strong>Genre:</strong> {{ getVodDetail() ? (getVodDetail().genre || 'N/A') : 'N/A' }}</div>
                                 <div><strong>Release:</strong> {{ getVodDetail() ? (getVodDetail().releaseDate || 'N/A') : 'N/A' }}</div>
                                 <div><strong>Director:</strong> {{ getVodDetail() ? (getVodDetail().director || 'N/A') : 'N/A' }}</div>
@@ -255,18 +263,15 @@
                             <p v-if="getSeriesDetail() && getSeriesDetail().plot">{{ getSeriesDetail().plot }}</p>
                             <a
                                     v-if="getImdbUrl()"
-                                    class="nf-imdb-link"
+                                    class="nf-imdb-rating-pill"
                                     :href="getImdbUrl()"
                                     target="_blank"
                                     rel="noopener noreferrer"
                                     title="Open on IMDb">
                                 <img class="nf-imdb-logo" src="https://upload.wikimedia.org/wikipedia/commons/6/69/IMDB_Logo_2016.svg" alt="IMDb">
-                                <span>{{ getSeriesDetail() ? (getSeriesDetail().tmdb || '') : '' }}</span>
-                                <i class="bi bi-box-arrow-up-right"></i>
+                                <span class="nf-imdb-rating-value">{{ getSeriesDetail() ? (getSeriesDetail().rating || 'N/A') : 'N/A' }}</span>
                             </a>
                             <div class="nf-meta-grid">
-                                <div><strong>IMDb:</strong> {{ getSeriesDetail() ? (getSeriesDetail().tmdb || 'N/A') : 'N/A' }}</div>
-                                <div><strong>Rating:</strong> {{ getSeriesDetail() ? (getSeriesDetail().rating || 'N/A') : 'N/A' }}</div>
                                 <div><strong>Genre:</strong> {{ getSeriesDetail() ? (getSeriesDetail().genre || 'N/A') : 'N/A' }}</div>
                                 <div><strong>Release:</strong> {{ getSeriesDetail() ? (getSeriesDetail().releaseDate || 'N/A') : 'N/A' }}</div>
                                 <div><strong>Director:</strong> {{ getSeriesDetail() ? (getSeriesDetail().director || 'N/A') : 'N/A' }}</div>
@@ -289,7 +294,7 @@
                     </div>
                     <div class="nf-episode-list">
                         <button
-                                v-for="(episode, idx) in filteredSeriesDetailEpisodes"
+                                v-for="(episode, idx) in visibleSeriesDetailEpisodes"
                                 :key="'series-detail-ep-' + (episode.channelId || episode.id)"
                                 class="nf-episode-row"
                                 @click="handleModeSelection('series', episode)">
@@ -307,6 +312,9 @@
                             <div class="nf-episode-play">
                                 <i class="bi bi-play-circle-fill"></i>
                             </div>
+                        </button>
+                        <button v-if="hasMoreSeriesDetailEpisodes" class="nf-episode-load-more" @click="loadMoreSeriesDetailEpisodes">
+                            Load more episodes
                         </button>
                         <div v-if="filteredSeriesDetailEpisodes.length === 0" class="nf-empty-card">No episodes found in this season.</div>
                     </div>
@@ -344,9 +352,6 @@
                         <button class="btn btn-link text-white me-2" @click="onPlayerControlClick($event, togglePictureInPicture)" title="Picture in Picture">
                             <i class="bi bi-pip"></i>
                         </button>
-                        <button class="btn btn-link text-white me-2" @click="onPlayerControlClick($event, requestFullscreenPlayer)" title="Fullscreen">
-                            <i class="bi bi-arrows-fullscreen"></i>
-                        </button>
                         <div class="dropdown d-inline-block" v-if="videoTracks && videoTracks.length">
                             <button class="btn btn-link text-white me-2" type="button" id="resolutionMenuButtonPopup" data-bs-toggle="dropdown" aria-expanded="false" title="Resolutions">
                                 <i class="bi bi-gear-fill"></i>
@@ -368,6 +373,9 @@
             </div>
 
             <div class="nf-player-media">
+                <div v-if="playerLoading" class="nf-player-loading">
+                    <div class="spinner-border text-light" role="status" aria-label="Loading player"></div>
+                </div>
                 <video
                         v-if="!isYoutube"
                         :key="playerKey"
