--- a/web/index.html
+++ b/web/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="css/spa.css">
     <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
     <!-- Shaka Player -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.7.11/shaka-player.compiled.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/shaka-player@5/dist/shaka-player.compiled.js"></script>
 </head>
 <body>
 
