--- a/web/myflix.html
+++ b/web/myflix.html
@@ -16,7 +16,7 @@
             crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/myflix.css">
     <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.7.11/shaka-player.compiled.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/shaka-player@5/dist/shaka-player.compiled.js"></script>
 </head>
 <body>
 <div id="app" class="myflix-app">
